// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpandCollapse accessibility wraps a heading tag around a panel label 1`] = `
.c0 {
  padding: 0;
  margin: 0;
  border-width: 0;
  font-family: "TELUS-Web","Helvetica Neue",Helvetica,Arial,sans-serif;
  color: #2a2c2e;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  box-shadow: none;
  cursor: pointer;
  width: 100%;
  text-align: left;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c3 {
  width: 100%;
}

<PanelWrapper__HeaderButtonClickable
  aria-expanded={false}
  disabled={false}
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  panelDisabled={false}
>
  <StyledComponent
    aria-expanded={false}
    disabled={false}
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "PanelWrapper__HeaderButtonClickable-doiyjm-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "padding: 0;",
            "margin: 0;",
            "border-width: 0;",
            "font-family: \\"TELUS-Web\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif;",
            "color: #2a2c2e;",
            "appearance: none;",
            "background: none;",
            "box-shadow: none;",
            "cursor: pointer;",
            [Function],
          ],
        },
        "displayName": "PanelWrapper__HeaderButtonClickable",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "PanelWrapper__HeaderButtonClickable-doiyjm-0",
        "target": "button",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    panelDisabled={false}
  >
    <button
      aria-expanded={false}
      className="c0"
      disabled={false}
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <Box
        inline={false}
        tag="div"
        vertical={3}
      >
        <div
          className="TDS_Box-modules__verticalPadding-3___Fsv37"
        >
          <Box
            between={3}
            inline={true}
            tag="div"
          >
            <div
              className="TDS_Box-modules__betweenRightMargin-3___1dOvx TDS_Box-modules__inline___jTHcz"
            >
              <PanelWrapper__CaretContainer
                isDisabled={false}
              >
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "PanelWrapper__CaretContainer-doiyjm-1",
                        "isStatic": false,
                        "lastClassName": "lkXOVg",
                        "rules": Array [
                          [Function],
                        ],
                      },
                      "displayName": "PanelWrapper__CaretContainer",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "PanelWrapper__CaretContainer-doiyjm-1",
                      "target": "div",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  isDisabled={false}
                >
                  <div
                    className=""
                  >
                    <Translate
                      direction="y"
                      distance="0.25rem"
                      in={false}
                      timeout={300}
                    >
                      <Transition
                        appear={false}
                        enter={true}
                        exit={true}
                        in={false}
                        mountOnEnter={false}
                        onEnter={[Function]}
                        onEntered={[Function]}
                        onEntering={[Function]}
                        onExit={[Function]}
                        onExited={[Function]}
                        onExiting={[Function]}
                        timeout={300}
                        unmountOnExit={false}
                      >
                        <div
                          style={
                            Object {
                              "transition": "transform 300ms",
                            }
                          }
                        >
                          <Text
                            block={false}
                            bold={false}
                            invert={false}
                            size="large"
                          >
                            <span
                              className="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__large___24W-w TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__largeFont___3k7bm TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__color___2CNH8"
                            >
                              <DecorativeIcon
                                size={16}
                                symbol="caretDown"
                                variant="primary"
                              >
                                <Icon
                                  aria-hidden="true"
                                  size={16}
                                  symbol="caretDown"
                                  variant="primary"
                                >
                                  <i
                                    aria-hidden="true"
                                    className="TDS_Icon-modules__iconCaretDown___3by8b TDS_Icon-modules__icon___13xYd TDS_Icon-modules__primary___2UY-N TDS_Icon-modules__size16___1pm12"
                                  />
                                </Icon>
                              </DecorativeIcon>
                            </span>
                          </Text>
                        </div>
                      </Transition>
                    </Translate>
                  </div>
                </StyledComponent>
              </PanelWrapper__CaretContainer>
              <PanelWrapper__HeaderContainer
                direction="row"
              >
                <StyledComponent
                  direction="row"
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "PanelWrapper__HeaderContainer-doiyjm-2",
                        "isStatic": false,
                        "lastClassName": "c2",
                        "rules": Array [
                          [Function],
                        ],
                      },
                      "displayName": "PanelWrapper__HeaderContainer",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "PanelWrapper__HeaderContainer-doiyjm-2",
                      "target": "div",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <div
                    className="c1"
                    direction="row"
                  >
                    <PanelWrapper__HeaderContainer
                      direction="column"
                    >
                      <StyledComponent
                        direction="column"
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "PanelWrapper__HeaderContainer-doiyjm-2",
                              "isStatic": false,
                              "lastClassName": "c2",
                              "rules": Array [
                                [Function],
                              ],
                            },
                            "displayName": "PanelWrapper__HeaderContainer",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "PanelWrapper__HeaderContainer-doiyjm-2",
                            "target": "div",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                      >
                        <div
                          className="c2"
                          direction="column"
                        >
                          <PanelWrapper__HeaderTitleContainer>
                            <StyledComponent
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "PanelWrapper__HeaderTitleContainer-doiyjm-3",
                                    "isStatic": true,
                                    "lastClassName": "c3",
                                    "rules": Array [
                                      "width: 100%;",
                                    ],
                                  },
                                  "displayName": "PanelWrapper__HeaderTitleContainer",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "PanelWrapper__HeaderTitleContainer-doiyjm-3",
                                  "target": "div",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                            >
                              <div
                                className="c3"
                              >
                                <Text
                                  block={false}
                                  bold={false}
                                  invert={false}
                                  size="large"
                                >
                                  <span
                                    className="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__large___24W-w TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__largeFont___3k7bm TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__color___2CNH8"
                                  >
                                    Panel title
                                  </span>
                                </Text>
                              </div>
                            </StyledComponent>
                          </PanelWrapper__HeaderTitleContainer>
                        </div>
                      </StyledComponent>
                    </PanelWrapper__HeaderContainer>
                  </div>
                </StyledComponent>
              </PanelWrapper__HeaderContainer>
            </div>
          </Box>
        </div>
      </Box>
    </button>
  </StyledComponent>
</PanelWrapper__HeaderButtonClickable>
`;

exports[`ExpandCollapse disabled panels are rendered in a disabled treatment 1`] = `
.c0 {
  padding: 0;
  margin: 0;
  border-width: 0;
  font-family: "TELUS-Web","Helvetica Neue",Helvetica,Arial,sans-serif;
  color: #2a2c2e;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  box-shadow: none;
  cursor: pointer;
  width: 100%;
  text-align: left;
  background: #f7f7f8;
  cursor: default;
}

.c1 {
  visibility: hidden;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c4 {
  width: 100%;
}

<button
  aria-expanded={false}
  className="c0"
  disabled={true}
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <Box
    inline={false}
    tag="div"
    vertical={3}
  >
    <div
      className="TDS_Box-modules__verticalPadding-3___Fsv37"
    >
      <Box
        between={3}
        inline={true}
        tag="div"
      >
        <div
          className="TDS_Box-modules__betweenRightMargin-3___1dOvx TDS_Box-modules__inline___jTHcz"
        >
          <PanelWrapper__CaretContainer
            isDisabled={true}
          >
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "PanelWrapper__CaretContainer-doiyjm-1",
                    "isStatic": false,
                    "lastClassName": "c1",
                    "rules": Array [
                      [Function],
                    ],
                  },
                  "displayName": "PanelWrapper__CaretContainer",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "PanelWrapper__CaretContainer-doiyjm-1",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              isDisabled={true}
            >
              <div
                className="c1"
              >
                <Translate
                  direction="y"
                  distance="0.25rem"
                  in={false}
                  timeout={300}
                >
                  <Transition
                    appear={false}
                    enter={true}
                    exit={true}
                    in={false}
                    mountOnEnter={false}
                    onEnter={[Function]}
                    onEntered={[Function]}
                    onEntering={[Function]}
                    onExit={[Function]}
                    onExited={[Function]}
                    onExiting={[Function]}
                    timeout={300}
                    unmountOnExit={false}
                  >
                    <div
                      style={
                        Object {
                          "transition": "transform 300ms",
                        }
                      }
                    >
                      <Text
                        block={false}
                        bold={false}
                        invert={false}
                        size="large"
                      >
                        <span
                          className="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__large___24W-w TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__largeFont___3k7bm TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__color___2CNH8"
                        >
                          <DecorativeIcon
                            size={16}
                            symbol="caretDown"
                            variant="primary"
                          >
                            <Icon
                              aria-hidden="true"
                              size={16}
                              symbol="caretDown"
                              variant="primary"
                            >
                              <i
                                aria-hidden="true"
                                className="TDS_Icon-modules__iconCaretDown___3by8b TDS_Icon-modules__icon___13xYd TDS_Icon-modules__primary___2UY-N TDS_Icon-modules__size16___1pm12"
                              />
                            </Icon>
                          </DecorativeIcon>
                        </span>
                      </Text>
                    </div>
                  </Transition>
                </Translate>
              </div>
            </StyledComponent>
          </PanelWrapper__CaretContainer>
          <PanelWrapper__HeaderContainer
            direction="row"
          >
            <StyledComponent
              direction="row"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "PanelWrapper__HeaderContainer-doiyjm-2",
                    "isStatic": false,
                    "lastClassName": "c3",
                    "rules": Array [
                      [Function],
                    ],
                  },
                  "displayName": "PanelWrapper__HeaderContainer",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "PanelWrapper__HeaderContainer-doiyjm-2",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
            >
              <div
                className="c2"
                direction="row"
              >
                <PanelWrapper__HeaderContainer
                  direction="column"
                >
                  <StyledComponent
                    direction="column"
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "PanelWrapper__HeaderContainer-doiyjm-2",
                          "isStatic": false,
                          "lastClassName": "c3",
                          "rules": Array [
                            [Function],
                          ],
                        },
                        "displayName": "PanelWrapper__HeaderContainer",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "PanelWrapper__HeaderContainer-doiyjm-2",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <div
                      className="c3"
                      direction="column"
                    >
                      <PanelWrapper__HeaderTitleContainer>
                        <StyledComponent
                          forwardedComponent={
                            Object {
                              "$$typeof": Symbol(react.forward_ref),
                              "attrs": Array [],
                              "componentStyle": ComponentStyle {
                                "componentId": "PanelWrapper__HeaderTitleContainer-doiyjm-3",
                                "isStatic": true,
                                "lastClassName": "c4",
                                "rules": Array [
                                  "width: 100%;",
                                ],
                              },
                              "displayName": "PanelWrapper__HeaderTitleContainer",
                              "foldedComponentIds": Array [],
                              "render": [Function],
                              "styledComponentId": "PanelWrapper__HeaderTitleContainer-doiyjm-3",
                              "target": "div",
                              "toString": [Function],
                              "warnTooManyClasses": [Function],
                              "withComponent": [Function],
                            }
                          }
                          forwardedRef={null}
                        >
                          <div
                            className="c4"
                          >
                            <Text
                              block={false}
                              bold={false}
                              invert={false}
                              size="large"
                            >
                              <span
                                className="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__large___24W-w TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__largeFont___3k7bm TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__color___2CNH8"
                              >
                                Panel title
                              </span>
                            </Text>
                          </div>
                        </StyledComponent>
                      </PanelWrapper__HeaderTitleContainer>
                    </div>
                  </StyledComponent>
                </PanelWrapper__HeaderContainer>
              </div>
            </StyledComponent>
          </PanelWrapper__HeaderContainer>
        </div>
      </Box>
    </div>
  </Box>
</button>
`;

exports[`ExpandCollapse renders a closed panel 1`] = `
.c1 {
  padding: 0;
  margin: 0;
  border-width: 0;
  width: 100%;
  height: 1px;
  background-color: #d8d8d8;
}

.c6 {
  padding: 0;
  margin: 0;
  border-width: 0;
  height: 32px;
  background-image: radial-gradient(ellipse at top,rgba(150,150,150,0.1) 0%,rgba(0,0,0,0) 70%);
}

.c2 {
  padding: 0;
  margin: 0;
  border-width: 0;
  font-family: "TELUS-Web","Helvetica Neue",Helvetica,Arial,sans-serif;
  color: #2a2c2e;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  box-shadow: none;
  cursor: pointer;
  width: 100%;
  text-align: left;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c5 {
  width: 100%;
}

.c0 {
  background-color: #fff;
}

<ExpandCollapse
  open={Array []}
  topDivider={true}
>
  <Panels
    isPanelOpen={[Function]}
    open={Array []}
    togglePanel={[Function]}
    topDivider={true}
  >
    <Panels__PanelBase
      open={Array []}
    >
      <StyledComponent
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "Panels__PanelBase-sc-78ahii-0",
              "isStatic": true,
              "lastClassName": "c0",
              "rules": Array [
                "background-color: #fff;",
              ],
            },
            "displayName": "Panels__PanelBase",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "Panels__PanelBase-sc-78ahii-0",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        open={Array []}
      >
        <div
          className="c0"
          open={Array []}
        >
          <HairlineDivider
            gradient={false}
            vertical={false}
          >
            <HairlineDivider__StyledHairlineDivider
              gradient={false}
              vertical={false}
            >
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "HairlineDivider__StyledHairlineDivider-biamlk-0",
                      "isStatic": false,
                      "lastClassName": "c1",
                      "rules": Array [
                        "padding: 0;",
                        "margin: 0;",
                        "border-width: 0;",
                        [Function],
                      ],
                    },
                    "displayName": "HairlineDivider__StyledHairlineDivider",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "HairlineDivider__StyledHairlineDivider-biamlk-0",
                    "target": "hr",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                gradient={false}
                vertical={false}
              >
                <hr
                  className="c1"
                />
              </StyledComponent>
            </HairlineDivider__StyledHairlineDivider>
          </HairlineDivider>
          <PanelWrapper
            key="panel-1"
            onClick={[Function]}
            open={false}
            panelDisabled={false}
            panelHeader="Panel title"
            panelId="panel-1"
          >
            <div
              data-testid="panel-1"
            >
              <div>
                <PanelWrapper__HeaderButtonClickable
                  aria-expanded={false}
                  disabled={false}
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  panelDisabled={false}
                >
                  <StyledComponent
                    aria-expanded={false}
                    disabled={false}
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "PanelWrapper__HeaderButtonClickable-doiyjm-0",
                          "isStatic": false,
                          "lastClassName": "c2",
                          "rules": Array [
                            "padding: 0;",
                            "margin: 0;",
                            "border-width: 0;",
                            "font-family: \\"TELUS-Web\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif;",
                            "color: #2a2c2e;",
                            "appearance: none;",
                            "background: none;",
                            "box-shadow: none;",
                            "cursor: pointer;",
                            [Function],
                          ],
                        },
                        "displayName": "PanelWrapper__HeaderButtonClickable",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "PanelWrapper__HeaderButtonClickable-doiyjm-0",
                        "target": "button",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    panelDisabled={false}
                  >
                    <button
                      aria-expanded={false}
                      className="c2"
                      disabled={false}
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <Box
                        inline={false}
                        tag="div"
                        vertical={3}
                      >
                        <div
                          className="TDS_Box-modules__verticalPadding-3___Fsv37"
                        >
                          <Box
                            between={3}
                            inline={true}
                            tag="div"
                          >
                            <div
                              className="TDS_Box-modules__betweenRightMargin-3___1dOvx TDS_Box-modules__inline___jTHcz"
                            >
                              <PanelWrapper__CaretContainer
                                isDisabled={false}
                              >
                                <StyledComponent
                                  forwardedComponent={
                                    Object {
                                      "$$typeof": Symbol(react.forward_ref),
                                      "attrs": Array [],
                                      "componentStyle": ComponentStyle {
                                        "componentId": "PanelWrapper__CaretContainer-doiyjm-1",
                                        "isStatic": false,
                                        "lastClassName": "lkXOVg",
                                        "rules": Array [
                                          [Function],
                                        ],
                                      },
                                      "displayName": "PanelWrapper__CaretContainer",
                                      "foldedComponentIds": Array [],
                                      "render": [Function],
                                      "styledComponentId": "PanelWrapper__CaretContainer-doiyjm-1",
                                      "target": "div",
                                      "toString": [Function],
                                      "warnTooManyClasses": [Function],
                                      "withComponent": [Function],
                                    }
                                  }
                                  forwardedRef={null}
                                  isDisabled={false}
                                >
                                  <div
                                    className=""
                                  >
                                    <Translate
                                      direction="y"
                                      distance="0.25rem"
                                      in={false}
                                      timeout={300}
                                    >
                                      <Transition
                                        appear={false}
                                        enter={true}
                                        exit={true}
                                        in={false}
                                        mountOnEnter={false}
                                        onEnter={[Function]}
                                        onEntered={[Function]}
                                        onEntering={[Function]}
                                        onExit={[Function]}
                                        onExited={[Function]}
                                        onExiting={[Function]}
                                        timeout={300}
                                        unmountOnExit={false}
                                      >
                                        <div
                                          style={
                                            Object {
                                              "transition": "transform 300ms",
                                            }
                                          }
                                        >
                                          <Text
                                            block={false}
                                            bold={false}
                                            invert={false}
                                            size="large"
                                          >
                                            <span
                                              className="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__large___24W-w TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__largeFont___3k7bm TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__color___2CNH8"
                                            >
                                              <DecorativeIcon
                                                size={16}
                                                symbol="caretDown"
                                                variant="primary"
                                              >
                                                <Icon
                                                  aria-hidden="true"
                                                  size={16}
                                                  symbol="caretDown"
                                                  variant="primary"
                                                >
                                                  <i
                                                    aria-hidden="true"
                                                    className="TDS_Icon-modules__iconCaretDown___3by8b TDS_Icon-modules__icon___13xYd TDS_Icon-modules__primary___2UY-N TDS_Icon-modules__size16___1pm12"
                                                  />
                                                </Icon>
                                              </DecorativeIcon>
                                            </span>
                                          </Text>
                                        </div>
                                      </Transition>
                                    </Translate>
                                  </div>
                                </StyledComponent>
                              </PanelWrapper__CaretContainer>
                              <PanelWrapper__HeaderContainer
                                direction="row"
                              >
                                <StyledComponent
                                  direction="row"
                                  forwardedComponent={
                                    Object {
                                      "$$typeof": Symbol(react.forward_ref),
                                      "attrs": Array [],
                                      "componentStyle": ComponentStyle {
                                        "componentId": "PanelWrapper__HeaderContainer-doiyjm-2",
                                        "isStatic": false,
                                        "lastClassName": "c4",
                                        "rules": Array [
                                          [Function],
                                        ],
                                      },
                                      "displayName": "PanelWrapper__HeaderContainer",
                                      "foldedComponentIds": Array [],
                                      "render": [Function],
                                      "styledComponentId": "PanelWrapper__HeaderContainer-doiyjm-2",
                                      "target": "div",
                                      "toString": [Function],
                                      "warnTooManyClasses": [Function],
                                      "withComponent": [Function],
                                    }
                                  }
                                  forwardedRef={null}
                                >
                                  <div
                                    className="c3"
                                    direction="row"
                                  >
                                    <PanelWrapper__HeaderContainer
                                      direction="column"
                                    >
                                      <StyledComponent
                                        direction="column"
                                        forwardedComponent={
                                          Object {
                                            "$$typeof": Symbol(react.forward_ref),
                                            "attrs": Array [],
                                            "componentStyle": ComponentStyle {
                                              "componentId": "PanelWrapper__HeaderContainer-doiyjm-2",
                                              "isStatic": false,
                                              "lastClassName": "c4",
                                              "rules": Array [
                                                [Function],
                                              ],
                                            },
                                            "displayName": "PanelWrapper__HeaderContainer",
                                            "foldedComponentIds": Array [],
                                            "render": [Function],
                                            "styledComponentId": "PanelWrapper__HeaderContainer-doiyjm-2",
                                            "target": "div",
                                            "toString": [Function],
                                            "warnTooManyClasses": [Function],
                                            "withComponent": [Function],
                                          }
                                        }
                                        forwardedRef={null}
                                      >
                                        <div
                                          className="c4"
                                          direction="column"
                                        >
                                          <PanelWrapper__HeaderTitleContainer>
                                            <StyledComponent
                                              forwardedComponent={
                                                Object {
                                                  "$$typeof": Symbol(react.forward_ref),
                                                  "attrs": Array [],
                                                  "componentStyle": ComponentStyle {
                                                    "componentId": "PanelWrapper__HeaderTitleContainer-doiyjm-3",
                                                    "isStatic": true,
                                                    "lastClassName": "c5",
                                                    "rules": Array [
                                                      "width: 100%;",
                                                    ],
                                                  },
                                                  "displayName": "PanelWrapper__HeaderTitleContainer",
                                                  "foldedComponentIds": Array [],
                                                  "render": [Function],
                                                  "styledComponentId": "PanelWrapper__HeaderTitleContainer-doiyjm-3",
                                                  "target": "div",
                                                  "toString": [Function],
                                                  "warnTooManyClasses": [Function],
                                                  "withComponent": [Function],
                                                }
                                              }
                                              forwardedRef={null}
                                            >
                                              <div
                                                className="c5"
                                              >
                                                <Text
                                                  block={false}
                                                  bold={false}
                                                  invert={false}
                                                  size="large"
                                                >
                                                  <span
                                                    className="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__large___24W-w TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__largeFont___3k7bm TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__color___2CNH8"
                                                  >
                                                    Panel title
                                                  </span>
                                                </Text>
                                              </div>
                                            </StyledComponent>
                                          </PanelWrapper__HeaderTitleContainer>
                                        </div>
                                      </StyledComponent>
                                    </PanelWrapper__HeaderContainer>
                                  </div>
                                </StyledComponent>
                              </PanelWrapper__HeaderContainer>
                            </div>
                          </Box>
                        </div>
                      </Box>
                    </button>
                  </StyledComponent>
                </PanelWrapper__HeaderButtonClickable>
                <Reveal
                  duration={500}
                  height={0}
                  in={false}
                  timeout={0}
                >
                  <Transition
                    appear={false}
                    duration={500}
                    enter={true}
                    exit={true}
                    in={false}
                    mountOnEnter={false}
                    onEnter={[Function]}
                    onEntered={[Function]}
                    onEntering={[Function]}
                    onExit={[Function]}
                    onExited={[Function]}
                    onExiting={[Function]}
                    timeout={0}
                    unmountOnExit={false}
                  >
                    <div
                      aria-hidden={true}
                      data-testid="childrenContainer"
                      style={
                        Object {
                          "height": 0,
                          "overflow": "hidden",
                          "transition": "height 500ms",
                          "visibility": "hidden",
                        }
                      }
                    >
                      <div
                        data-testid="content"
                      >
                        <DimpleDivider>
                          <DimpleDivider__StyledDimpleDivider>
                            <StyledComponent
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "DimpleDivider__StyledDimpleDivider-quxnvh-0",
                                    "isStatic": true,
                                    "lastClassName": "c6",
                                    "rules": Array [
                                      "padding: 0;",
                                      "margin: 0;",
                                      "border-width: 0;",
                                      "height: 32px;",
                                      "background-image: radial-gradient(ellipse at top, rgba(150, 150, 150, 0.1) 0%, rgba(0, 0, 0, 0) 70%);",
                                    ],
                                  },
                                  "displayName": "DimpleDivider__StyledDimpleDivider",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "DimpleDivider__StyledDimpleDivider-quxnvh-0",
                                  "target": "hr",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                            >
                              <hr
                                className="c6"
                              />
                            </StyledComponent>
                          </DimpleDivider__StyledDimpleDivider>
                        </DimpleDivider>
                        <Box
                          inline={false}
                          inset={4}
                          tag="div"
                        >
                          <div
                            className="TDS_Box-modules__horizontalPadding-4___3W1-P TDS_Box-modules__verticalPadding-4___QMNNa"
                          >
                            <Text
                              block={true}
                              bold={false}
                              invert={false}
                              size="base"
                            >
                              <span
                                className="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__base___2nkPE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__baseFont___2Cfk4 TDS_Typography-modules__color___2CNH8 TDS_Typography-modules__blockText___2Gy51"
                              >
                                <Panel
                                  disabled={false}
                                  header="Panel title"
                                  id="panel-1"
                                  key=".0"
                                >
                                  <div>
                                    Panel content
                                  </div>
                                </Panel>
                              </span>
                            </Text>
                          </div>
                        </Box>
                      </div>
                    </div>
                  </Transition>
                </Reveal>
                <HairlineDivider
                  gradient={false}
                  vertical={false}
                >
                  <HairlineDivider__StyledHairlineDivider
                    gradient={false}
                    vertical={false}
                  >
                    <StyledComponent
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "HairlineDivider__StyledHairlineDivider-biamlk-0",
                            "isStatic": false,
                            "lastClassName": "c1",
                            "rules": Array [
                              "padding: 0;",
                              "margin: 0;",
                              "border-width: 0;",
                              [Function],
                            ],
                          },
                          "displayName": "HairlineDivider__StyledHairlineDivider",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "HairlineDivider__StyledHairlineDivider-biamlk-0",
                          "target": "hr",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                      gradient={false}
                      vertical={false}
                    >
                      <hr
                        className="c1"
                      />
                    </StyledComponent>
                  </HairlineDivider__StyledHairlineDivider>
                </HairlineDivider>
              </div>
            </div>
          </PanelWrapper>
        </div>
      </StyledComponent>
    </Panels__PanelBase>
  </Panels>
</ExpandCollapse>
`;

exports[`ExpandCollapse renders an open panel 1`] = `
.c1 {
  padding: 0;
  margin: 0;
  border-width: 0;
  width: 100%;
  height: 1px;
  background-color: #d8d8d8;
}

.c6 {
  padding: 0;
  margin: 0;
  border-width: 0;
  height: 32px;
  background-image: radial-gradient(ellipse at top,rgba(150,150,150,0.1) 0%,rgba(0,0,0,0) 70%);
}

.c2 {
  padding: 0;
  margin: 0;
  border-width: 0;
  font-family: "TELUS-Web","Helvetica Neue",Helvetica,Arial,sans-serif;
  color: #2a2c2e;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  box-shadow: none;
  cursor: pointer;
  width: 100%;
  text-align: left;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c5 {
  width: 100%;
}

.c0 {
  background-color: #fff;
}

<ExpandCollapse
  open={
    Array [
      "panel-1",
    ]
  }
  topDivider={true}
>
  <Panels
    isPanelOpen={[Function]}
    open={
      Array [
        "panel-1",
      ]
    }
    togglePanel={[Function]}
    topDivider={true}
  >
    <Panels__PanelBase
      open={
        Array [
          "panel-1",
        ]
      }
    >
      <StyledComponent
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "Panels__PanelBase-sc-78ahii-0",
              "isStatic": true,
              "lastClassName": "c0",
              "rules": Array [
                "background-color: #fff;",
              ],
            },
            "displayName": "Panels__PanelBase",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "Panels__PanelBase-sc-78ahii-0",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        open={
          Array [
            "panel-1",
          ]
        }
      >
        <div
          className="c0"
          open={
            Array [
              "panel-1",
            ]
          }
        >
          <HairlineDivider
            gradient={false}
            vertical={false}
          >
            <HairlineDivider__StyledHairlineDivider
              gradient={false}
              vertical={false}
            >
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "HairlineDivider__StyledHairlineDivider-biamlk-0",
                      "isStatic": false,
                      "lastClassName": "c1",
                      "rules": Array [
                        "padding: 0;",
                        "margin: 0;",
                        "border-width: 0;",
                        [Function],
                      ],
                    },
                    "displayName": "HairlineDivider__StyledHairlineDivider",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "HairlineDivider__StyledHairlineDivider-biamlk-0",
                    "target": "hr",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                gradient={false}
                vertical={false}
              >
                <hr
                  className="c1"
                />
              </StyledComponent>
            </HairlineDivider__StyledHairlineDivider>
          </HairlineDivider>
          <PanelWrapper
            key="panel-1"
            onClick={[Function]}
            open={true}
            panelDisabled={false}
            panelHeader="Panel title"
            panelId="panel-1"
          >
            <div
              data-testid="panel-1"
            >
              <div>
                <PanelWrapper__HeaderButtonClickable
                  aria-expanded={true}
                  disabled={false}
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  panelDisabled={false}
                >
                  <StyledComponent
                    aria-expanded={true}
                    disabled={false}
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "PanelWrapper__HeaderButtonClickable-doiyjm-0",
                          "isStatic": false,
                          "lastClassName": "c2",
                          "rules": Array [
                            "padding: 0;",
                            "margin: 0;",
                            "border-width: 0;",
                            "font-family: \\"TELUS-Web\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif;",
                            "color: #2a2c2e;",
                            "appearance: none;",
                            "background: none;",
                            "box-shadow: none;",
                            "cursor: pointer;",
                            [Function],
                          ],
                        },
                        "displayName": "PanelWrapper__HeaderButtonClickable",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "PanelWrapper__HeaderButtonClickable-doiyjm-0",
                        "target": "button",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    panelDisabled={false}
                  >
                    <button
                      aria-expanded={true}
                      className="c2"
                      disabled={false}
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <Box
                        inline={false}
                        tag="div"
                        vertical={3}
                      >
                        <div
                          className="TDS_Box-modules__verticalPadding-3___Fsv37"
                        >
                          <Box
                            between={3}
                            inline={true}
                            tag="div"
                          >
                            <div
                              className="TDS_Box-modules__betweenRightMargin-3___1dOvx TDS_Box-modules__inline___jTHcz"
                            >
                              <PanelWrapper__CaretContainer
                                isDisabled={false}
                              >
                                <StyledComponent
                                  forwardedComponent={
                                    Object {
                                      "$$typeof": Symbol(react.forward_ref),
                                      "attrs": Array [],
                                      "componentStyle": ComponentStyle {
                                        "componentId": "PanelWrapper__CaretContainer-doiyjm-1",
                                        "isStatic": false,
                                        "lastClassName": "lkXOVg",
                                        "rules": Array [
                                          [Function],
                                        ],
                                      },
                                      "displayName": "PanelWrapper__CaretContainer",
                                      "foldedComponentIds": Array [],
                                      "render": [Function],
                                      "styledComponentId": "PanelWrapper__CaretContainer-doiyjm-1",
                                      "target": "div",
                                      "toString": [Function],
                                      "warnTooManyClasses": [Function],
                                      "withComponent": [Function],
                                    }
                                  }
                                  forwardedRef={null}
                                  isDisabled={false}
                                >
                                  <div
                                    className=""
                                  >
                                    <Translate
                                      direction="y"
                                      distance="-0.25rem"
                                      in={false}
                                      timeout={300}
                                    >
                                      <Transition
                                        appear={false}
                                        enter={true}
                                        exit={true}
                                        in={false}
                                        mountOnEnter={false}
                                        onEnter={[Function]}
                                        onEntered={[Function]}
                                        onEntering={[Function]}
                                        onExit={[Function]}
                                        onExited={[Function]}
                                        onExiting={[Function]}
                                        timeout={300}
                                        unmountOnExit={false}
                                      >
                                        <div
                                          style={
                                            Object {
                                              "transition": "transform 300ms",
                                            }
                                          }
                                        >
                                          <Text
                                            block={false}
                                            bold={false}
                                            invert={false}
                                            size="large"
                                          >
                                            <span
                                              className="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__large___24W-w TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__largeFont___3k7bm TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__color___2CNH8"
                                            >
                                              <DecorativeIcon
                                                size={16}
                                                symbol="caretUp"
                                                variant="primary"
                                              >
                                                <Icon
                                                  aria-hidden="true"
                                                  size={16}
                                                  symbol="caretUp"
                                                  variant="primary"
                                                >
                                                  <i
                                                    aria-hidden="true"
                                                    className="TDS_Icon-modules__iconCaretUp___3PL_K TDS_Icon-modules__icon___13xYd TDS_Icon-modules__primary___2UY-N TDS_Icon-modules__size16___1pm12"
                                                  />
                                                </Icon>
                                              </DecorativeIcon>
                                            </span>
                                          </Text>
                                        </div>
                                      </Transition>
                                    </Translate>
                                  </div>
                                </StyledComponent>
                              </PanelWrapper__CaretContainer>
                              <PanelWrapper__HeaderContainer
                                direction="row"
                              >
                                <StyledComponent
                                  direction="row"
                                  forwardedComponent={
                                    Object {
                                      "$$typeof": Symbol(react.forward_ref),
                                      "attrs": Array [],
                                      "componentStyle": ComponentStyle {
                                        "componentId": "PanelWrapper__HeaderContainer-doiyjm-2",
                                        "isStatic": false,
                                        "lastClassName": "c4",
                                        "rules": Array [
                                          [Function],
                                        ],
                                      },
                                      "displayName": "PanelWrapper__HeaderContainer",
                                      "foldedComponentIds": Array [],
                                      "render": [Function],
                                      "styledComponentId": "PanelWrapper__HeaderContainer-doiyjm-2",
                                      "target": "div",
                                      "toString": [Function],
                                      "warnTooManyClasses": [Function],
                                      "withComponent": [Function],
                                    }
                                  }
                                  forwardedRef={null}
                                >
                                  <div
                                    className="c3"
                                    direction="row"
                                  >
                                    <PanelWrapper__HeaderContainer
                                      direction="column"
                                    >
                                      <StyledComponent
                                        direction="column"
                                        forwardedComponent={
                                          Object {
                                            "$$typeof": Symbol(react.forward_ref),
                                            "attrs": Array [],
                                            "componentStyle": ComponentStyle {
                                              "componentId": "PanelWrapper__HeaderContainer-doiyjm-2",
                                              "isStatic": false,
                                              "lastClassName": "c4",
                                              "rules": Array [
                                                [Function],
                                              ],
                                            },
                                            "displayName": "PanelWrapper__HeaderContainer",
                                            "foldedComponentIds": Array [],
                                            "render": [Function],
                                            "styledComponentId": "PanelWrapper__HeaderContainer-doiyjm-2",
                                            "target": "div",
                                            "toString": [Function],
                                            "warnTooManyClasses": [Function],
                                            "withComponent": [Function],
                                          }
                                        }
                                        forwardedRef={null}
                                      >
                                        <div
                                          className="c4"
                                          direction="column"
                                        >
                                          <PanelWrapper__HeaderTitleContainer>
                                            <StyledComponent
                                              forwardedComponent={
                                                Object {
                                                  "$$typeof": Symbol(react.forward_ref),
                                                  "attrs": Array [],
                                                  "componentStyle": ComponentStyle {
                                                    "componentId": "PanelWrapper__HeaderTitleContainer-doiyjm-3",
                                                    "isStatic": true,
                                                    "lastClassName": "c5",
                                                    "rules": Array [
                                                      "width: 100%;",
                                                    ],
                                                  },
                                                  "displayName": "PanelWrapper__HeaderTitleContainer",
                                                  "foldedComponentIds": Array [],
                                                  "render": [Function],
                                                  "styledComponentId": "PanelWrapper__HeaderTitleContainer-doiyjm-3",
                                                  "target": "div",
                                                  "toString": [Function],
                                                  "warnTooManyClasses": [Function],
                                                  "withComponent": [Function],
                                                }
                                              }
                                              forwardedRef={null}
                                            >
                                              <div
                                                className="c5"
                                              >
                                                <Text
                                                  block={false}
                                                  bold={false}
                                                  invert={false}
                                                  size="large"
                                                >
                                                  <span
                                                    className="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__large___24W-w TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__largeFont___3k7bm TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__color___2CNH8"
                                                  >
                                                    Panel title
                                                  </span>
                                                </Text>
                                              </div>
                                            </StyledComponent>
                                          </PanelWrapper__HeaderTitleContainer>
                                        </div>
                                      </StyledComponent>
                                    </PanelWrapper__HeaderContainer>
                                  </div>
                                </StyledComponent>
                              </PanelWrapper__HeaderContainer>
                            </div>
                          </Box>
                        </div>
                      </Box>
                    </button>
                  </StyledComponent>
                </PanelWrapper__HeaderButtonClickable>
                <Reveal
                  duration={500}
                  height={0}
                  in={true}
                  timeout={500}
                >
                  <Transition
                    appear={false}
                    duration={500}
                    enter={true}
                    exit={true}
                    in={true}
                    mountOnEnter={false}
                    onEnter={[Function]}
                    onEntered={[Function]}
                    onEntering={[Function]}
                    onExit={[Function]}
                    onExited={[Function]}
                    onExiting={[Function]}
                    timeout={500}
                    unmountOnExit={false}
                  >
                    <div
                      aria-hidden={false}
                      data-testid="childrenContainer"
                      style={
                        Object {
                          "height": "auto",
                          "overflow": "visible",
                          "transition": "height 500ms",
                        }
                      }
                    >
                      <div
                        data-testid="content"
                      >
                        <DimpleDivider>
                          <DimpleDivider__StyledDimpleDivider>
                            <StyledComponent
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "DimpleDivider__StyledDimpleDivider-quxnvh-0",
                                    "isStatic": true,
                                    "lastClassName": "c6",
                                    "rules": Array [
                                      "padding: 0;",
                                      "margin: 0;",
                                      "border-width: 0;",
                                      "height: 32px;",
                                      "background-image: radial-gradient(ellipse at top, rgba(150, 150, 150, 0.1) 0%, rgba(0, 0, 0, 0) 70%);",
                                    ],
                                  },
                                  "displayName": "DimpleDivider__StyledDimpleDivider",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "DimpleDivider__StyledDimpleDivider-quxnvh-0",
                                  "target": "hr",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                            >
                              <hr
                                className="c6"
                              />
                            </StyledComponent>
                          </DimpleDivider__StyledDimpleDivider>
                        </DimpleDivider>
                        <Box
                          inline={false}
                          inset={4}
                          tag="div"
                        >
                          <div
                            className="TDS_Box-modules__horizontalPadding-4___3W1-P TDS_Box-modules__verticalPadding-4___QMNNa"
                          >
                            <Text
                              block={true}
                              bold={false}
                              invert={false}
                              size="base"
                            >
                              <span
                                className="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__base___2nkPE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__baseFont___2Cfk4 TDS_Typography-modules__color___2CNH8 TDS_Typography-modules__blockText___2Gy51"
                              >
                                <Panel
                                  disabled={false}
                                  header="Panel title"
                                  id="panel-1"
                                  key=".0"
                                >
                                  <div>
                                    Panel content
                                  </div>
                                </Panel>
                              </span>
                            </Text>
                          </div>
                        </Box>
                      </div>
                    </div>
                  </Transition>
                </Reveal>
                <HairlineDivider
                  gradient={false}
                  vertical={false}
                >
                  <HairlineDivider__StyledHairlineDivider
                    gradient={false}
                    vertical={false}
                  >
                    <StyledComponent
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "HairlineDivider__StyledHairlineDivider-biamlk-0",
                            "isStatic": false,
                            "lastClassName": "c1",
                            "rules": Array [
                              "padding: 0;",
                              "margin: 0;",
                              "border-width: 0;",
                              [Function],
                            ],
                          },
                          "displayName": "HairlineDivider__StyledHairlineDivider",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "HairlineDivider__StyledHairlineDivider-biamlk-0",
                          "target": "hr",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                      gradient={false}
                      vertical={false}
                    >
                      <hr
                        className="c1"
                      />
                    </StyledComponent>
                  </HairlineDivider__StyledHairlineDivider>
                </HairlineDivider>
              </div>
            </div>
          </PanelWrapper>
        </div>
      </StyledComponent>
    </Panels__PanelBase>
  </Panels>
</ExpandCollapse>
`;
